Update: 에약 신청 처리 페이지 구현
TODO: 예약 상세 정보 모달 구현이 필요함

--- a/frontend/dguonoff/src/components/pages/admin/AdminHome.module.css
+++ b/frontend/dguonoff/src/components/pages/admin/AdminHome.module.css
@@ -10,8 +10,8 @@
 .sidebar {
   height: calc(100% - 2px);
   width: 300px;
-  border-top-right-radius: 8px;
-  border-bottom-right-radius: 8px;
+  border-top-right-radius: 15px;
+  border-bottom-right-radius: 15px;
   border: 1px solid var(--component-main-color);
   background-color: var(--component-main-color);
 }
@@ -109,9 +109,13 @@
 
 
 
-
 /* mainContent's components  */
 .main_top {
+  width: 100%;
+}
+
+.main_mid {
+  height: calc(100% - 80px);
   width: 100%;
 }
 
