--- a/frontend/dguonoff/src/App.css
+++ b/frontend/dguonoff/src/App.css
@@ -1,7 +1,26 @@
 :root {
+    /* component */
     --component-main-color: #FBAF3E;
+    --component-table-head-color: #ffe7c2;
     --component-inner-color: white;
     --component-inner-select-color: black;
     --component-innertext-color: black;
     --component-innertext-select-color: white;
+
+
+    /* button */
+    --button-color: #2260ff;
+    --button-hover-color: #80a3fc;
+    --button-border-color: #cbd8e4;
+    --button-text-color: #ffffff;
+    --button-text-hover-color: #000000;
+
+    --button-positive-color: #08b66d;
+    --button-positive-hover-color: #7be6b9;
+
+    --button-negative-color: #e06060;
+    --button-negative-hover-color: #d19a9a;
+
+    --button-blank-color: #696969;
+    --button-blank--hover-color: #afafaf;
 }
