--- a/frontend/dguonoff/src/modules/virtualizedTable/VirtualizedTable.module.css
+++ b/frontend/dguonoff/src/modules/virtualizedTable/VirtualizedTable.module.css
@@ -4,12 +4,16 @@
 }
 
 .table__header {
-    width: 98%;
-    max-width: 98%;
+    width: calc(100% - 17px);
+    border-right-width: 17px;
+    border-right-style: solid;
+    max-width: 100%;
 }
 
 .table__headers_columns {
     display: flex;
+    justify-content: center;
+    align-items: center;
 }
 
 .table__body {
@@ -20,9 +24,13 @@
 
 .table__body_rows {
     width: 100%;
+
 }
 
 .virtualizedTable_item {
     height: 100%;
     width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
