--- a/frontend/dguonoff/src/components/pages/admin/mainContent/IndividualTimetableManager.module.css
+++ b/frontend/dguonoff/src/components/pages/admin/mainContent/IndividualTimetableManager.module.css
@@ -1,4 +1,4 @@
-.fixedTimetableManager {
+.individualTimetableManager {
     width: 100%;
     height: 100%;
     display: flex;
@@ -6,7 +6,7 @@
 }
 
 
-/* fixedTimetableManager's components */
+/* individualTimetableManager's components */
 .search_filter {
     width: calc(100% - 30px);
     height: 50px;
