--- a/frontend/dguonoff/src/modules/reservationButton/ReservationButton.module.css
+++ b/frontend/dguonoff/src/modules/reservationButton/ReservationButton.module.css
@@ -10,26 +10,26 @@
   }
   
   .reservationButton {
-    background-color: #f0b255;
+    background-color: #FBAF3E;
     color: white;
     width: calc(100% - 20px);
     height: calc(100vh / 16);
     border: none;
-    border-radius: 8px;
+    border-radius: 12px;
     font-size: 16px;
     font-weight: bold;
     cursor: pointer;
     outline: none;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
-    transition: background-color 0.3s, box-shadow 0.3s;
+    transition: background-color 0.3s;
   }
   
   .reservationButton:hover {
-    background-color:  #f5d4a0;
+    background-color:  #FBAF3E;
     box-shadow: 0 4px 6px rgba(0, 0, 0, 0.3);
   }
   
   .reservationButton:active {
-    background-color: #f5d4a0;
+    background-color: #FBAF3E;
     box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
   }
