--- a/frontend/dguonoff/src/components/pages/admin/signup/AdminSignup.module.css
+++ b/frontend/dguonoff/src/components/pages/admin/signup/AdminSignup.module.css
@@ -12,7 +12,7 @@
 .container {
     height: 80%;
     width: 100%;
-    margin-bottom: 10%;
+    margin-bottom: 5%;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -57,6 +57,32 @@
     margin-bottom: 20px;
     border-radius: 10px;
     border: 2px solid var(--component-main-color);
+    font-size: 15px;
+}
+
+.email_form {
+    height: 40px;
+    width: 360px;
+    padding: 5px;
+    margin-bottom: 20px;
+    display: flex;
+}
+
+.email_form input {
+    height: calc(100% - 10px);
+    width: 60%;
+    padding: 5px;
+    margin: 0px;
+    border-radius: 10px;
+    border: 2px solid var(--component-main-color);
+    font-size: 15px;
+}
+
+.email_form label {
+    height: calc(100% - 10px);
+    width: 15px;
+    padding: 5px;
+    margin: 0px;
     font-size: 15px;
 }
 
