Update: 고정시간표 관리, 개별시간표 관리, 예약 관리, API매서드 추가 구현, 모달 모듈 버그 수정
1) 고정시간표 관리
개발 완료

2) 개별시간표 관리
개발 완료

3) 예약 관리
API추가되면 추가 개발 필요

4) API매서드 추가 구현

5) 모달 모듈 버그 수정
Transient props를 활용하여 스타일드 컴포넌트 내부에서만 사용되고 DOM 요소로 전달되지 않도록함

--- a/frontend/dguonoff/src/App.css
+++ b/frontend/dguonoff/src/App.css
@@ -2,6 +2,8 @@
     /* component */
     --component-main-color: #FBAF3E;
     --component-main-light-color: #ffe7c2;
+    --component-disable-color: #8a8a8a;
+    --component-disable-light-color: #d2d2d2;
     --component-inner-color: white;
     --component-inner-select-color: black;
     --component-innertext-color: black;
