--- a/frontend/dguonoff/src/components/pages/admin/home/mainContent/commons/FacilityEventInfo.module.css
+++ b/frontend/dguonoff/src/components/pages/admin/home/mainContent/commons/FacilityEventInfo.module.css
@@ -60,7 +60,6 @@
     border-radius: 10px;
     border: 2px solid var(--component-main-color);
     font-size: 17px;
-    text-align: center;
 }
 
 .memo_field textarea {
@@ -71,7 +70,7 @@
     resize: none;
     border: 2px solid var(--component-main-color);
     font-size: 17px;
-    text-align: center;
+    font-weight: 600;
 }
 
 .event_info__body .buttons {
