Update: 예약 승인/거절 API 매서드 구현 완료. 예약 신청 관리 페이지 구현 완료
1) 예약 승인/거절 API 매서드 구현 완료

2) 예약 신청 관리 페이지 구현 완료

3) TODO
- 관리자가 예약 목록을 불러오는 API가 수정되면 해당 API매서드 구현이 필요함
- 현재 상태에서 강의실, 세미나실, 운동장 등 을 구현할 수 있을지 의논해야함
- 이메일 API는 어떻게 구현할 것인지에 대해 의논해야함
- 게시판 API는 어떻게 되고 있는지 의논해야함

--- a/frontend/dguonoff/src/components/pages/admin/home/mainContent/ReservationManager.module.css
+++ b/frontend/dguonoff/src/components/pages/admin/home/mainContent/ReservationManager.module.css
@@ -110,32 +110,32 @@
     font-size: 15px;
 }
 
-.manage_button_pending {
+.manage_button_PENDING {
     border: 2px solid var(--button-blank-color);
     background-color: var(--button-blank-light-color);
 }
 
-.manage_button_pending:hover {
+.manage_button_PENDING:hover {
     background-color: var(--button-blank-color);
     color: var(--button-text-light-color);
 }
 
-.manage_button_accept {
+.manage_button_APPROVED {
     border: 2px solid var(--button-positive-color);
     background-color: var(--button-positive-light-color);
 }
 
-.manage_button_accept:hover {
+.manage_button_APPROVED:hover {
     background-color: var(--button-positive-color);
     color: var(--button-text-light-color);
 }
 
-.manage_button_reject {
+.manage_button_REJECTED {
     border: 2px solid var(--button-negative-color);
     background-color: var(--button-negative-light-color);
 }
 
-.manage_button_reject:hover {
+.manage_button_REJECTED :hover {
     background-color: var(--button-negative-color);
     color: var(--button-text-light-color);
 }
