--- a/frontend/dguonoff/src/components/pages/admin/home/mainContent/ReservationManager.module.css
+++ b/frontend/dguonoff/src/components/pages/admin/home/mainContent/ReservationManager.module.css
@@ -3,19 +3,16 @@
     height: 100%;
     display: flex;
     flex-direction: column;
+    align-items: center;
+    justify-content: center;
 }
 
 
 
 /* reservationManager's components */
-.top_contents {
-    height: 80px;
-    width: 100%;
-}
-
 .mid_contents {
-    height: calc(100% - 80px);
-    width: 100%;
+    height: calc(100% - 20px);
+    width: calc(100% - 20px);
 }
 
 
@@ -144,10 +141,10 @@
 
 /* ReservationDetailsModal's components */
 .reservation_details {
-    width: calc(50vw - 80px);
-    height: calc(50vh - 80px);
+    width: calc(50vw - 80px - 16px);
+    height: calc(50vh - 80px - 16px);
     padding: 40px;
-    border: 2px solid var(--component-main-color);
+    border: 8px solid var(--component-main-color);
     border-radius: 15px;
     background-color: var(--component-inner-color);
     display: flex;
