--- a/frontend/dguonoff/src/components/pages/service/reservation/FacilityManager.module.css
+++ b/frontend/dguonoff/src/components/pages/service/reservation/FacilityManager.module.css
@@ -1,19 +1,31 @@
 .FacilityManager {
-  width: 100vw;
-  height: 100vh;
+  width: calc(100vw - 30px);
+  height: calc(100vh - 20px);
+  padding: 15px;
+  padding-top: 5px;
 }
 
+
+/* FacilityManager's components */
 .top {
-  height: 50px;
+  height: 40px;
   width: 100%;
 
 }
 
-.middle {}
+.middle {
+  height: calc(calc(calc(100% - 40px) * 0.7));
+  width: 100%;
+  display: flex;
+}
 
-.bottom {}
+.bottom {
+  height: calc(calc(100% - 40px) * 0.3);
+  width: 100%;
+}
 
 
+/* top's components */
 .select_mode {
   height: 100%;
   width: 100%;
@@ -27,4 +39,21 @@
   justify-content: center;
   font-size: 20px;
   border-bottom: 5px solid var(--component-main-color);
+}
+
+
+/* middle's components */
+.middle_left {
+  height: calc(100% - 20px);
+  width: 15%;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+.middle_right {
+  height: calc(100% - 20px);
+  width: calc(100% - 15% - 10px);
+  padding-top: 10px;
+  padding-left: 10px;
+  padding-bottom: 10px;
 }
