Feat : 로그아웃 추가 및, ui 수정

--- a/frontend/dguonoff/src/components/pages/service/Service.module.css
+++ b/frontend/dguonoff/src/components/pages/service/Service.module.css
@@ -161,3 +161,10 @@
     padding: 20px;
     border-radius: 10px;
   }
+
+
+.toolBar{
+    display: flex;
+    justify-content: space-between;
+    align-items: center; /* 세로 중앙 정렬 */
+}
